--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://111.231.231.227:3306/xuyao?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.initial-size=5
